Can't scroll using the middle mouse button/scroll wheel on the panel headers #83346

Closed
opened 2020-12-03 04:15:09 +01:00 by TheRedWaxPolice · 13 comments

System Information
Operating system: Win 10

Blender Version
Broken: blender-2.92.0-dc4feed59dda-windows64
Worked: previous 2.92 versions

Short description of error
Previously it was possible to scroll the panels by using the middle mouse button + drag or by using the scroll wheel from any area in the panels, now it's only possible to scroll from the inside of the contents of the panel. It doesn't work if you try to middle mouse button + drag/scroll wheel on the panel header.

Exact steps for others to reproduce the error
Try to scroll on top of a panel header

2020-12-03_04-09-22.gif

**System Information** Operating system: Win 10 **Blender Version** Broken: blender-2.92.0-dc4feed59dda-windows64 Worked: previous 2.92 versions **Short description of error** Previously it was possible to scroll the panels by using the middle mouse button + drag or by using the scroll wheel from any area in the panels, now it's only possible to scroll from the inside of the contents of the panel. It doesn't work if you try to middle mouse button + drag/scroll wheel on the panel header. **Exact steps for others to reproduce the error** Try to scroll on top of a panel header ![2020-12-03_04-09-22.gif](https://archive.blender.org/developer/F9428136/2020-12-03_04-09-22.gif)

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Hans Goudey self-assigned this 2020-12-03 05:16:14 +01:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report!

Thanks for the report!

Added subscriber: @Wovchick

Added subscriber: @Wovchick
Member

Added subscriber: @zanqdo

Added subscriber: @zanqdo
Member

Confirmed, it not only affects panning but also scroll wheel events

Confirmed, it not only affects panning but also scroll wheel events
Member

Yikes, okay, in that case I'll work on this tonight.

Yikes, okay, in that case I'll work on this tonight.

Added subscriber: @NelsonNAS

Added subscriber: @NelsonNAS

In #83346#1067932, @HooglyBoogly wrote:
Yikes, okay, in that case I'll work on this tonight.

LOL. I mean, it's literally in the title that the scroll wheel stopped working too. But yeah, it's really a very annoying bug.
Good luck fixing it. 😉

> In #83346#1067932, @HooglyBoogly wrote: > Yikes, okay, in that case I'll work on this tonight. LOL. I mean, it's literally in the title that the scroll wheel stopped working too. But yeah, it's really a very annoying bug. Good luck fixing it. 😉

This issue was referenced by 2bd0263fbf

This issue was referenced by 2bd0263fbf2175c672d46c9df9eff7fd3ceecbce
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

In #83346#1067935, @NelsonNAS wrote:
LOL. I mean, it's literally in the title that the scroll wheel stopped working too.

Hah, I have terrible reading comprehension sometimes. As I expected it was a super simple problem with my last commit here.

> In #83346#1067935, @NelsonNAS wrote: > LOL. I mean, it's literally in the title that the scroll wheel stopped working too. Hah, I have terrible reading comprehension sometimes. As I expected it was a super simple problem with my last commit here.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#83346
No description provided.